--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Richard Alba",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
