--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Richard Alba",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^3.0.4",
     "express": "^4.17.1",
     "socket.io": "^3.1.0"
   },
